fixed components styling and spacing, removed data folder

--- a/src/components/UploadForm/UploadForm.scss
+++ b/src/components/UploadForm/UploadForm.scss
@@ -5,9 +5,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  @include desktop {
+    gap: 0;
+  }
   &__label {
     color: $primary-silver;
     font-weight: $bold;
+    @include desktop {
+      margin-bottom: 1rem;
+    }
   }
   &__title-input {
     height: 2rem;
@@ -20,7 +26,7 @@
     border-radius: 4px;
     resize: none;
     @include tablet {
-      padding: 1rem 1rem;
+      padding: 1rem;
       margin-bottom: 0;
       width: 100%;
       height: 1rem;
@@ -43,8 +49,12 @@
     border: 1px solid $secondary-mercury;
     resize: none;
     @include tablet {
+      padding-left: 1rem;
       padding-bottom: 1.75rem;
       width: 100%;
+    }
+    @include desktop {
+      height: 9.5rem;
     }
     &:active,
     &:focus {
@@ -76,6 +86,7 @@
       gap: 5rem;
     }
     @include desktop {
+      margin-top: 1rem;
     }
   }
   &__btn-wrapper-desktop {
